--- a/build.xml
+++ b/build.xml
@@ -124,10 +124,15 @@
         <mkdir dir="${build.classes}" />
         <mkdir dir="${build.lib}" />
         <antcall target="preparePrefixDir"/>
+        <antcall target="prepareCodaDir"/>
     </target>
 
     <target name="preparePrefixDir" if="prefixDefined">
         <mkdir dir="${prefix}/jar" />
+    </target>
+
+    <target name="prepareCodaDir" if="codaDefined">
+        <mkdir dir="${env.CODA}/common/jar" />
     </target>
 
 
@@ -145,7 +150,7 @@
     </target>
     
     <!-- Compile all source -->
-    <target name="compile" depends="prepare,CODA_cp" description="Compiles all source code.">
+    <target name="compile" depends="CODA_cp,prepare" description="Compiles all source code.">
         <javac destdir="${build.classes}" debug="${javac.debug}" optimize="yes" >
             <classpath refid="classpath" />
             <src path="${src.dir}" />
