--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
     <property name="build.lib"     value="${build.dir}/lib" />
     <property name="local.jars"    value="java/jars" />
     <property name="doc.dir"       value="doc/javadoc" />
+    <property name="scripts.dir"   value="scripts" />
     <property name="jarName"       value="JEventViewer-${jev.version}.jar" />
     <property name="allJarNames"   value="JEventViewer-*.jar" />
     <property name="jarPath"       value="${build.lib}/${jarName}" />
@@ -27,7 +28,7 @@
     
     <!-- Help -->
     <target name="help">
-        <echo message="Usage: ant [ant options] &lt;target1&gt; [target2 | target3 | ...]" />
+        <echo message="Usage: ant [-Dprefix=dir] &lt;target1&gt; [target2 | target3 | ...]" />
         <echo message="" />
         <echo message="       targets:" />
         <echo message="       help       - print out usage" />
@@ -38,7 +39,8 @@
         <echo message="       jar        - compile and create jar file" />
         <echo message="       install    - create jar file and install into 'prefix'" />
         <echo message="                    if given on command line by -Dprefix=dir'," />
-        <echo message="                    else install into CODA if defined" />
+        <echo message="                    else install into CODA if defined." />
+        <echo message="                    Also install scripts into the bin directory" />
         <echo message="       uninstall  - remove jar file previously installed into 'prefix'" />
         <echo message="                    if given on command line by -Dprefix=dir'," />
         <echo message="                    else installed into CODA if defined" />
@@ -132,12 +134,15 @@
 
     <target name="preparePrefixDir" if="prefixDefined">
         <mkdir dir="${prefix}/jar" />
+        <mkdir dir="${prefix}/bin" />
     </target>
 
     <target name="prepareCodaDir" if="codaDefined">
         <mkdir dir="${env.CODA}/common/jar" />
+        <mkdir dir="${env.CODA}/common/bin" />
+        <mkdir dir="${env.CODA}/Linux-i686/bin" />
+        <mkdir dir="${env.CODA}/Linux-x86_64/bin" />
     </target>
-
 
     <!-- Clean by removing class files -->
     <target name="clean" description="Remove all class files">
@@ -213,6 +218,38 @@
         <antcall target="error"/>
         <antcall target="installInPrefix"/>
         <antcall target="installInCODA"/>
+        <antcall target="installScriptsInPrefix"/>
+        <antcall target="installScriptsInCODA"/>
+    </target>
+
+    <!-- Install in scripts in prefix -->
+    <target name="installScriptsInPrefix" if="prefixDefined">
+        <echo>Install scripts into ${prefix}/bin</echo>
+        <copy todir="${prefix}/bin" >
+            <fileset dir="${scripts.dir}"  >
+                <include name="*"/>
+            </fileset>
+        </copy>
+    </target>
+
+    <!-- Install in scripts in $CODA -->
+    <target name="installScriptsInCODA" unless="prefixDefined" if="codaDefined">
+        <echo>Install scripts into ${env.CODA}/common/bin, ${env.CODA}/Linux-i686/bin, and ${env.CODA}/Linux-x86_64/bin</echo>
+        <copy todir="${env.CODA}/common/bin" >
+            <fileset dir="${scripts.dir}"  >
+                <include name="*"/>
+            </fileset>
+        </copy>
+        <copy todir="${env.CODA}/Linux-i686/bin" >
+            <fileset dir="${scripts.dir}"  >
+                <include name="*"/>
+            </fileset>
+        </copy>
+        <copy todir="${env.CODA}/Linux-x86_64/bin" >
+            <fileset dir="${scripts.dir}"  >
+                <include name="*"/>
+            </fileset>
+        </copy>
     </target>
 
     <!-- Install in prefix -->
