--- a/build.xml
+++ b/build.xml
@@ -225,31 +225,25 @@
     <!-- Install in scripts in prefix -->
     <target name="installScriptsInPrefix" if="prefixDefined">
         <echo>Install scripts into ${prefix}/bin</echo>
-        <copy todir="${prefix}/bin" >
-            <fileset dir="${scripts.dir}"  >
-                <include name="*"/>
-            </fileset>
-        </copy>
+        <!-- Using "exec", bash and cp preserves file permissions, but "copy" does not -->
+        <exec executable="bash">
+            <arg line="-c 'mkdir ${prefix}/bin; cp -pr ${scripts.dir}/* ${prefix}/bin'" />
+        </exec>
     </target>
 
     <!-- Install in scripts in $CODA -->
     <target name="installScriptsInCODA" unless="prefixDefined" if="codaDefined">
         <echo>Install scripts into ${env.CODA}/common/bin, ${env.CODA}/Linux-i686/bin, and ${env.CODA}/Linux-x86_64/bin</echo>
-        <copy todir="${env.CODA}/common/bin" >
-            <fileset dir="${scripts.dir}"  >
-                <include name="*"/>
-            </fileset>
-        </copy>
-        <copy todir="${env.CODA}/Linux-i686/bin" >
-            <fileset dir="${scripts.dir}"  >
-                <include name="*"/>
-            </fileset>
-        </copy>
-        <copy todir="${env.CODA}/Linux-x86_64/bin" >
-            <fileset dir="${scripts.dir}"  >
-                <include name="*"/>
-            </fileset>
-        </copy>
+        <!-- Using "exec", bash and cp preserves file permissions, but "copy" does not -->
+        <exec executable="bash">
+            <arg line="-c 'mkdir ${env.CODA}/common/bin; cp -pr ${scripts.dir}/* ${env.CODA}/common/bin'" />
+        </exec>
+        <exec executable="bash">
+            <arg line="-c 'mkdir ${env.CODA}/Linux-i686/bin; cp -pr ${scripts.dir}/* ${env.CODA}/Linux-i686/bin'" />
+        </exec>
+        <exec executable="bash">
+            <arg line="-c 'mkdir ${env.CODA}/Linux-x86_64/bin; cp -pr ${scripts.dir}/* ${env.CODA}/Linux-x86_64/bin'" />
+        </exec>
     </target>
 
     <!-- Install in prefix -->
